--- a/api/package.json
+++ b/api/package.json
@@ -9,10 +9,14 @@
     "start": "func start",
     "test": "echo \"No tests yet...\""
   },
-  "dependencies": {},
+  "dependencies": {
+    "apollo-server-azure-functions": "3.11.1",
+    "axios": "1.3.4",
+    "graphql": "16.6.0"
+  },
   "devDependencies": {
-    "@azure/functions": "^3.0.0",
-    "@types/node": "^16.x",
+    "@azure/functions": "3.0.0",
+    "@types/node": "16.x",
     "typescript": "^4.0.0"
   }
 }
