--- a/ui/package.json
+++ b/ui/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "codegen": "graphql-codegen",
+    "build": "npm run codegen && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -18,7 +19,10 @@
     "@angular/platform-browser": "15.1.0",
     "@angular/platform-browser-dynamic": "15.1.0",
     "@angular/router": "15.1.0",
+    "@apollo/client": "3.7.9",
+    "apollo-angular": "4.2.1",
     "fast-levenshtein": "3.0.0",
+    "graphql": "16.6.0",
     "nearby-big-cities": "1.0.0",
     "rxjs": "7.8.0",
     "tslib": "2.3.0",
@@ -28,6 +32,10 @@
     "@angular-devkit/build-angular": "15.1.6",
     "@angular/cli": "15.2.0",
     "@angular/compiler-cli": "15.1.0",
+    "@graphql-codegen/cli": "3.2.1",
+    "@graphql-codegen/typescript": "3.0.1",
+    "@graphql-codegen/typescript-apollo-angular": "3.5.6",
+    "@graphql-codegen/typescript-operations": "3.0.1",
     "@types/all-the-cities": "3.1.0",
     "@types/fast-levenshtein": "0.0.2",
     "@types/jasmine": "4.3.1",
